--- a/public/css/style.css
+++ b/public/css/style.css
@@ -643,30 +643,35 @@ section {
   z-index: -999;
 }
 
-.breadcrumb {
+.breadcrumb > .container {
   padding-top: 20px;
   padding: 20px 0 20px 100px;
 }
 
-.breadcrumb > a {
+.breadcrumb > .container > a {
   color: #000;
   font-size: 1.2em;
 }
 
-.breadcrumb > a:hover {
+.breadcrumb > .container > a:hover {
   color: #2A66AC;
 }
 
 section > .about1 {
-  padding-left: 200px;
+  padding-left: 180px;
 }
 
 section > .about1 > p {
   margin-bottom: 0;
-  padding-bottom: 20px;
+  padding-bottom: 40px;
+  font-weight: 800;
 }
 
 @media (min-width: 768px) {
+  section > .about1 > p {
+    font-size: 1.3em;
+  }
+
   section > .about2 > .col-md-4 {
     overflow: hidden;
     position: relative;
@@ -680,39 +685,34 @@ section > .about1 > p {
     text-align: center;
     position: absolute;
     font-size: 2em;
+    top: 26%;
     transition: all 2s;
     opacity: calc(0);
     z-index: 999;
   }
 
   section > .about2 > .col-md-4 > .parts1 {
-    top: 20%;
-    left: 25%;
+    left: 29%;
   }
 
   section > .about2 > .col-md-4 > .parts2 {
-    top: 20%;
-    left: 25%;
+    left: 29%;
   }
 
   section > .about2 > .col-md-4 > .parts3 {
-    top: 20%;
-    left: 30%;
+    left: 32%;
   }
 
   section > .about2 > .col-md-4 > .parts4 {
-    top: 20%;
-    left: 35%;
+    left: 39%;
   }
 
   section > .about2 > .col-md-4 > .parts5 {
-    top: 20%;
-    left: 35%;
+    left: 39%;
   }
 
   section > .about2 > .col-md-4 > .parts6 {
-    top: 20%;
-    left: 30%;
+    left: 32%;
   }
 
   section > .about2 > .col-md-4:hover img {
@@ -725,12 +725,12 @@ section > .about1 > p {
   }
 }
 @media (max-width: 767px) {
-  .breadcrumb {
-    padding: 20px 0 20px 50px;
+  .breadcrumb > .container {
+    padding: 20px 0 10px 30px;
   }
 
   section > .about1 {
-    padding-left: 50px;
+    padding-left: 20px;
   }
 
   section > .about1 > p {
@@ -744,4 +744,42 @@ section > .about1 > p {
   section > .about2 > .col-12 {
     text-align: center;
   }
+
+  section > .about2 > .col-12 > h3 {
+    font-size: 1.5em;
+    margin: 0;
+    padding-top: 10px;
+  }
+}
+section > .container {
+  display: flex;
+  justify-content: space-between;
+}
+
+section > .container > .product-left {
+  width: 20%;
+}
+
+section > .container > .product-right {
+  width: 80%;
+}
+
+section > .container > .product-left > dl > dt {
+  margin-bottom: 30px;
+  background-color: #70A8EA;
+  border-radius: 8px;
+}
+
+section > .container > .product-left > dl > dt > a {
+  display: block;
+  text-align: center;
+  padding: 8px;
+  border-radius: 8px;
+  color: #FFF;
+  font-size: 1.3em;
+  box-shadow: 2px 2px 3px #4b4b4b;
+}
+
+section > .container > .product-left > dl > dt > a:hover {
+  background-color: #22283a;
 }
