--- a/pug/about_us.pug
+++ b/pug/about_us.pug
@@ -3,7 +3,6 @@ head
   meta(http-equiv='X-UA-Compatible' content='IE=edge')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   title EasyWash 
-  link(rel="stylesheet", href="public/js/WOW-master/css/libs/animate.css")
   link(rel='stylesheet' href='public/css/style.css')
 
   body 
@@ -22,17 +21,20 @@ head
                             a(href="javascript:;") 產品介紹
                             ul.submenu
                                 li 
-                                    a(href="#") 冷氣清洗槽
+                                    a(href="product1.html") 冷氣清洗槽
                                 li 
-                                    a(href="#") 手工具、零件
+                                    a(href="#") 手工具
+                                li 
+                                    a(href="#") 零件
                         li
                             a(href="#") 客戶回饋
                         li
                             a(href="#") 常見問題
     .banner 
         img.img-fluid(src="public/images/product7.png", alt="")
-    section.wow.bounceInLeft
-        .breadcrumb.container
+    section
+        .breadcrumb 
+            .container
                 a(href="index.html") 首頁
                 span &nbsp; &gt; &nbsp;
                 a(href='about_us.html') 關於我們 
