--- a/pug/about_us.pug
+++ b/pug/about_us.pug
@@ -23,9 +23,9 @@ head
                                 li 
                                     a(href="product1.html") 冷氣清洗槽
                                 li 
-                                    a(href="#") 手工具
+                                    a(href="product2.html") 手工具
                                 li 
-                                    a(href="#") 零件
+                                    a(href="product3.html") 零件
                         li
                             a(href="#") 客戶回饋
                         li
