--- a/pug/product1.pug
+++ b/pug/product1.pug
@@ -23,9 +23,9 @@ head
                                 li 
                                     a(href="product1.html") 冷氣清洗槽
                                 li 
-                                    a(href="javascript:;") 手工具
+                                    a(href="product2.html") 手工具
                                 li 
-                                    a(href="javascript:;") 零件
+                                    a(href="product3.html") 零件
                         li
                             a(href="#") 客戶回饋
                         li
@@ -46,20 +46,20 @@ head
                     dt 
                         a(href="product1.html") 冷氣清洗槽
                     dt 
-                        a(href="#") 手工具
+                        a(href="product2.html") 手工具
                     dt 
-                        a(href="#") 零件
+                        a(href="product3.html") 零件
             .product-right
                 .row 
-                    .col-12.col-md-6 
+                    .col-md-6.col-12 
                         a(href="#") 
                             img.img-fluid(src="public/images/coming-soon.png", alt="")
                             h3 真豪洗
-                    .col-12.col-md-6 
+                    .col-md-6.col-12 
                         a(href="#") 
                             img.img-fluid(src="public/images/coming-soon.png", alt="")
                             h3 鯨霸
-                    .col-12.col-md-6 
+                    .col-md-6.col-12 
                         a(href="#") 
                             img.img-fluid(src="public/images/coming-soon.png", alt="")
                             h3 四方吹
