--- a/public/css/style.css
+++ b/public/css/style.css
@@ -765,21 +765,84 @@ section > .container > .product-right {
 }
 
 section > .container > .product-left > dl > dt {
-  margin-bottom: 30px;
   background-color: #70A8EA;
-  border-radius: 8px;
 }
 
 section > .container > .product-left > dl > dt > a {
   display: block;
   text-align: center;
-  padding: 8px;
-  border-radius: 8px;
   color: #FFF;
   font-size: 1.3em;
-  box-shadow: 2px 2px 3px #4b4b4b;
 }
 
 section > .container > .product-left > dl > dt > a:hover {
   background-color: #22283a;
+}
+
+section > .container > .product-right > .row h3 {
+  text-align: center;
+  color: #000;
+  font-size: 1.3em;
+}
+
+section > .container > .product-right > .row h3:hover {
+  color: gray;
+}
+
+@media (min-width: 768px) {
+  section > .container > .product-left > dl > dt {
+    margin-bottom: 30px;
+    border-radius: 8px;
+  }
+
+  section > .container > .product-left > dl > dt > a {
+    display: block;
+    text-align: center;
+    padding: 8px;
+    border-radius: 8px;
+    color: #FFF;
+    font-size: 1.3em;
+    box-shadow: 2px 2px 3px #4b4b4b;
+  }
+
+  section > .container > .product-right > .row > .col-md-6, .col-md-4 {
+    overflow: hidden;
+  }
+
+  section > .container > .product-right > .row img {
+    transition: all 1s;
+  }
+
+  section > .container > .product-right > .row img:hover {
+    transform: scale(1.1);
+  }
+}
+@media (max-width: 767px) {
+  section > .container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  section > .container > .product-left {
+    width: 100%;
+  }
+
+  section > .container > .product-left > dl > dt {
+    margin: 0;
+    padding: 0;
+    border-bottom: 1px solid white;
+  }
+
+  section > .container > .product-left > dl > dt > a {
+    display: block;
+    text-align: center;
+    color: #FFF;
+    font-size: 1.3em;
+    padding: 5px;
+  }
+
+  section > .container > .product-right {
+    width: 100%;
+  }
 }
