--- a/pug/faq.pug
+++ b/pug/faq.pug
@@ -37,32 +37,7 @@ head
             .container
                 a(href="index.html") 首頁
                 span &nbsp; &gt; &nbsp;
-                a(href='javascript:;') 產品介紹
-                span &nbsp; &gt; &nbsp;
-                a(href="product1.html") 冷氣清洗槽
-        .container
-            .product-left.col-12.col-md-9
-                dl 
-                    dt 
-                        a(href="product1.html") 冷氣清洗槽
-                    dt 
-                        a(href="product2.html") 手工具
-                    dt 
-                        a(href="product3.html") 零件
-            .product-right
-                .row 
-                    .col-md-6.col-12 
-                        a(href="#") 
-                            img.img-fluid(src="public/images/coming-soon.png", alt="")
-                            h3 真豪洗
-                    .col-md-6.col-12 
-                        a(href="#") 
-                            img.img-fluid(src="public/images/coming-soon.png", alt="")
-                            h3 鯨霸
-                    .col-md-6.col-12 
-                        a(href="#") 
-                            img.img-fluid(src="public/images/coming-soon.png", alt="")
-                            h3 四方吹
+                a(href='faq.html') 常見問題
     footer 
         .container 
             .row 
