--- a/pug/product2.pug
+++ b/pug/product2.pug
@@ -27,9 +27,9 @@ head
                                 li 
                                     a(href="product3.html") 零件
                         li
-                            a(href="#") 客戶回饋
+                            a(href="client.html") 客戶回饋
                         li
-                            a(href="#") 常見問題
+                            a(href="faq.html") 常見問題
     .banner 
         img.img-fluid(src="public/images/product7.png", alt="")
     section
