--- a/public/css/style.css
+++ b/public/css/style.css
@@ -809,11 +809,11 @@ section > .container > .product-right > .row h3:hover {
     overflow: hidden;
   }
 
-  section > .container > .product-right > .row img {
+  section > .container > .product-right > .row .img-big {
     transition: all 1s;
   }
 
-  section > .container > .product-right > .row img:hover {
+  section > .container > .product-right > .row .img-big:hover {
     transform: scale(1.1);
   }
 }
