--- a/pug/client.pug
+++ b/pug/client.pug
@@ -38,6 +38,26 @@ head
                 a(href="index.html") 首頁
                 span &nbsp; &gt; &nbsp;
                 a(href='client.html') 客戶回饋
+        .container 
+            .row 
+                .col-md-4.col-12 
+                    img.img-fluid(src="public/images/coming-soon.png", alt="")
+                .col-md-4.col-12 
+                    img.img-fluid(src="public/images/coming-soon.png", alt="")
+                .col-md-4.col-12 
+                    img.img-fluid(src="public/images/coming-soon.png", alt="")
+                .col-md-4.col-12 
+                    img.img-fluid(src="public/images/coming-soon.png", alt="")
+                .col-md-4.col-12 
+                    img.img-fluid(src="public/images/coming-soon.png", alt="")
+                .col-md-4.col-12 
+                    img.img-fluid(src="public/images/coming-soon.png", alt="")
+                .col-md-4.col-12 
+                    img.img-fluid(src="public/images/coming-soon.png", alt="")
+                .col-md-4.col-12 
+                    img.img-fluid(src="public/images/coming-soon.png", alt="")
+                .col-md-4.col-12 
+                    img.img-fluid(src="public/images/coming-soon.png", alt="")
     footer 
         .container 
             .row 
