--- a/pug/product1.pug
+++ b/pug/product1.pug
@@ -52,16 +52,16 @@ head
             .product-right
                 .row 
                     .col-md-6.col-12 
-                        a(href="#") 
-                            img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        a(href="product1_1.html") 
+                            img.img-fluid.img-big(src="public/images/coming-soon.png", alt="")
                             h3 真豪洗
                     .col-md-6.col-12 
-                        a(href="#") 
-                            img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        a(href="product1_2.html") 
+                            img.img-fluid.img-big(src="public/images/coming-soon.png", alt="")
                             h3 鯨霸
                     .col-md-6.col-12 
-                        a(href="#") 
-                            img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        a(href="product1_3.html") 
+                            img.img-fluid.img-big(src="public/images/coming-soon.png", alt="")
                             h3 四方吹
     footer 
         .container 
