--- a/pug/product1_3.pug
+++ b/pug/product1_3.pug
@@ -39,30 +39,25 @@ head
                 span &nbsp; &gt; &nbsp;
                 a(href='javascript:;') 產品介紹
                 span &nbsp; &gt; &nbsp;
-                a(href="product2.html") 手工具
+                a(href="product1.html") 冷氣清洗槽
+                span &nbsp; &gt; &nbsp;
+                a(href="product1_3.html") 四方吹
         .container
             .product-left.col-12.col-md-9
                 dl 
                     dt 
-                        a(href="product1.html") 冷氣清洗槽
+                        a(href="product1_1.html") 真豪洗
                     dt 
-                        a(href="product2.html") 手工具
+                        a(href="product1_2.html") 鯨霸
                     dt 
-                        a(href="product3.html") 零件
+                        a(href="product1_3.html") 四方吹
             .product-right
                 .row 
                     .col-md-6.col-12 
-                        a(href="product2_1.html") 
-                            img.img-fluid.img-big(src="public/images/coming-soon.png", alt="")
-                            h3 真豪修邊刀
-                    .col-md-6.col-12 
-                        a(href="product2_2.html") 
-                            img.img-fluid.img-big(src="public/images/coming-soon.png", alt="")
-                            h3 六角軸修邊刀頭
-                    .col-md-6.col-12 
-                        a(href="product2_3.html") 
-                            img.img-fluid.img-big(src="public/images/coming-soon.png", alt="")
-                            h3 壓力板手
+                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                    .col-md-6.col-12
+                        h2 四方吹冷氣清洗槽
+
     footer 
         .container 
             .row 
