--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -641,3 +641,54 @@ section>.container>.product-right>.row h3:hover{
     }
 
 }//767px以下執行-end
+//============================================================
+//=======================FAQ==================================
+//============================================================
+.container-faq{
+    margin: auto;
+    width: 50%;
+    max-width: 1280px;
+    padding-bottom: 40px;
+}
+.question-container{
+    border: 1px solid #2A66AC;
+    border-radius: 4px;
+    margin-bottom: 20px;
+    line-height: 20px;
+    padding: 10px 40px 10px 10px;
+    cursor: pointer;
+}
+.question-container:last-child{
+    margin-bottom: 0;
+}
+.question-container.active .answer {
+    display: block;
+}
+.question-container.active .icon-arrow {
+    transform: rotate(180deg);
+}
+.question-container>.question>h3{
+    margin: 0;
+    padding: 0;
+}
+.answer {
+    display: none;
+}
+.question {
+    position: relative;
+}
+.icon-arrow {
+    transition: transform .3s;
+    position: absolute;
+    width: 30px;
+    line-height: 30px;
+    text-align: center;
+    right: -35px;
+    top: 2px;
+}
+//767px以下執行-statr
+@media (max-width:767px){
+    .container-faq{
+        width: 90%;
+    }
+}//767px以下執行-end
