--- a/public/css/style.css
+++ b/public/css/style.css
@@ -846,3 +846,59 @@ section > .container > .product-right > .row h3:hover {
     width: 100%;
   }
 }
+.container-faq {
+  margin: auto;
+  width: 50%;
+  max-width: 1280px;
+  padding-bottom: 40px;
+}
+
+.question-container {
+  border: 1px solid #2A66AC;
+  border-radius: 4px;
+  margin-bottom: 20px;
+  line-height: 20px;
+  padding: 10px 40px 10px 10px;
+  cursor: pointer;
+}
+
+.question-container:last-child {
+  margin-bottom: 0;
+}
+
+.question-container.active .answer {
+  display: block;
+}
+
+.question-container.active .icon-arrow {
+  transform: rotate(180deg);
+}
+
+.question-container > .question > h3 {
+  margin: 0;
+  padding: 0;
+}
+
+.answer {
+  display: none;
+}
+
+.question {
+  position: relative;
+}
+
+.icon-arrow {
+  transition: transform 0.3s;
+  position: absolute;
+  width: 30px;
+  line-height: 30px;
+  text-align: center;
+  right: -35px;
+  top: 2px;
+}
+
+@media (max-width: 767px) {
+  .container-faq {
+    width: 90%;
+  }
+}
