--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -174,7 +174,7 @@ header>.container>.row-display-nowrap>nav>ul>li{
     }
     header>.container>.row-display-nowrap>nav>ul>li{
         width: 100%;
-        border-bottom: 1px solid #2A66AC;
+        border-bottom: 1px solid #ffffff;
         text-align: center;
         padding: 8px;
     }
