--- a/public/css/style.css
+++ b/public/css/style.css
@@ -413,16 +413,16 @@ header > .container > .row-display-nowrap > nav > ul > li {
   border-radius: 8px;
 }
 
-.S1 > .container > .logo2 {
+.S1 > .container > .logo2-1 {
   position: absolute;
   right: 0px;
   bottom: -100px;
   opacity: 0.5;
   width: 20%;
-  animation: logo2 1.5s infinite;
+  animation: logo2-1 1.5s infinite;
 }
 
-@keyframes logo2 {
+@keyframes logo2-1 {
   0% {
     transform: rotate(-20deg);
   }
@@ -433,6 +433,17 @@ header > .container > .row-display-nowrap > nav > ul > li {
     transform: rotate(-20deg);
   }
 }
+@keyframes logo2-2 {
+  0% {
+    transform: translate(-50px);
+  }
+  50% {
+    transform: translate(50px);
+  }
+  100% {
+    transform: translate(-50px);
+  }
+}
 @media (min-width: 768px) {
   .newspost > li > .date {
     padding-left: 100px;
@@ -440,7 +451,7 @@ header > .container > .row-display-nowrap > nav > ul > li {
   }
 }
 @media (max-width: 767px) {
-  .logo2 {
+  .logo2-1 {
     display: none;
   }
 
@@ -547,17 +558,17 @@ header > .container > .row-display-nowrap > nav > ul > li {
     font-weight: 800;
   }
 
-  .S3 > .container > .left > .logo2 {
+  .S3 > .container > .left > .logo2-2 {
     position: absolute;
     right: 0px;
     bottom: -80px;
     opacity: 0.5;
     width: 50%;
-    animation: logo2 1s infinite;
+    animation: logo2-2 1s infinite;
   }
 }
 @media (max-width: 767px) {
-  .logo2 {
+  .logo2-2 {
     display: none;
   }
 
@@ -699,33 +710,10 @@ section > .about1 > p {
     position: absolute;
     font-size: 2em;
     top: 26%;
+    left: 38%;
     transition: all 2s;
     opacity: calc(0);
     z-index: 999;
-  }
-
-  section > .about2 > .col-md-4 > .parts1 {
-    left: 29%;
-  }
-
-  section > .about2 > .col-md-4 > .parts2 {
-    left: 29%;
-  }
-
-  section > .about2 > .col-md-4 > .parts3 {
-    left: 32%;
-  }
-
-  section > .about2 > .col-md-4 > .parts4 {
-    left: 39%;
-  }
-
-  section > .about2 > .col-md-4 > .parts5 {
-    left: 39%;
-  }
-
-  section > .about2 > .col-md-4 > .parts6 {
-    left: 32%;
   }
 
   section > .about2 > .col-md-4:hover img {
