--- a/pug/about_us.pug
+++ b/pug/about_us.pug
@@ -43,22 +43,13 @@ body
         .about2.container.row 
             .col-md-4.col-12
                 img.img-fluid(src="public/images/coming-soon.png", alt="")
-                h3.parts1 ㄇ型主體架
+                h3 主體架
             .col-md-4.col-12
                 img.img-fluid(src="public/images/coming-soon.png", alt="")
-                h3.parts2 中層U型架
+                h3 集水袋
             .col-md-4.col-12
                 img.img-fluid(src="public/images/coming-soon.png", alt="")
-                h3.parts3 調整轉軸
-            .col-md-4.col-12
-                img.img-fluid(src="public/images/coming-soon.png", alt="")
-                h3.parts4 集水袋
-            .col-md-4.col-12
-                img.img-fluid(src="public/images/coming-soon.png", alt="")
-                h3.parts5 伸縮管
-            .col-md-4.col-12
-                img.img-fluid(src="public/images/coming-soon.png", alt="") 
-                h3.parts6 上擋水板 
+                h3 外提袋
     footer 
         .container 
             .row 
