--- a/pug/index.pug
+++ b/pug/index.pug
@@ -48,7 +48,7 @@ body
                     .date 2022-05-10
                     .product1 產品資訊
                     .news 四方吹清洗槽即將上市,請各位多多關注官方資訊!
-            img.logo2(src="public/images/LOGO2.png", alt="")
+            img.logo2-1(src="public/images/LOGO2.png", alt="")
     .S2   
         .container.row
             .left.col-12
@@ -62,7 +62,7 @@ body
         .container.row  
             .left.col-12
                 img.img-fluid(src="public/images/knife2.png", alt="")
-                img.logo2(src="public/images/LOGO2.png", alt="")
+                img.logo2-2(src="public/images/LOGO2.png", alt="")
             .right.col-12.order-md-1
                 h2 真豪修邊刀
                 p 方便攜帶
