--- a/pug/product1.pug
+++ b/pug/product1.pug
@@ -53,11 +53,11 @@ body
                 .row 
                     .col-md-6.col-12 
                         a(href="product1_1.html") 
-                            img.img-fluid.img-big(src="public/images/coming-soon.png", alt="")
+                            img.img-fluid.img-big(src="public/images/pd1-1.png", alt="")
                             h3 真豪洗
                     .col-md-6.col-12 
                         a(href="product1_2.html") 
-                            img.img-fluid.img-big(src="public/images/coming-soon.png", alt="")
+                            img.img-fluid.img-big(src="public/images/pd1-2.png", alt="")
                             h3 鯨霸
                     .col-md-6.col-12 
                         a(href="product1_3.html") 
