--- a/pug/product1_1.pug
+++ b/pug/product1_1.pug
@@ -54,7 +54,7 @@ body
             .product-right
                 .row 
                     .col-md-6.col-12 
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/pd1-1-1.png", alt="")
                     .col-md-6.col-12
                         h2 真豪洗冷氣清洗槽
                         p 適用尺寸:76~130CM
