--- a/public/css/style.css
+++ b/public/css/style.css
@@ -275,10 +275,11 @@ header > .container > .row-display-nowrap > nav > ul > li {
 
   .icon-menu {
     width: 50px;
+    height: 50px;
     display: block;
     color: #000;
     text-align: center;
-    margin-top: 40px;
+    margin-top: 45px;
   }
 
   .icon-menu.active nav {
@@ -435,13 +436,13 @@ header > .container > .row-display-nowrap > nav > ul > li {
 }
 @keyframes logo2-2 {
   0% {
-    transform: translate(-50px);
+    transform: translate(-30px);
   }
   50% {
-    transform: translate(50px);
+    transform: translate(30px);
   }
   100% {
-    transform: translate(-50px);
+    transform: translate(-30px);
   }
 }
 @media (min-width: 768px) {
@@ -564,7 +565,7 @@ header > .container > .row-display-nowrap > nav > ul > li {
     bottom: -80px;
     opacity: 0.5;
     width: 50%;
-    animation: logo2-2 1s infinite;
+    animation: logo2-2 2s infinite;
   }
 }
 @media (max-width: 767px) {
@@ -806,15 +807,15 @@ section > .container > .product-right > .row h3:hover {
     box-shadow: 2px 2px 3px #4b4b4b;
   }
 
-  section > .container > .product-right > .row > .col-md-6, .col-md-4 {
+  section > .container > .product-right > .row > .col-md-6 > a > .img-big {
     overflow: hidden;
   }
 
-  section > .container > .product-right > .row .img-big {
+  section > .container > .product-right > .row > .col-md-6 > a > .img-big > img {
     transition: all 1s;
   }
 
-  section > .container > .product-right > .row .img-big:hover {
+  section > .container > .product-right > .row > .col-md-6 > a > .img-big > img:hover {
     transform: scale(1.1);
   }
 }
