--- a/pug/product2.pug
+++ b/pug/product2.pug
@@ -53,15 +53,18 @@ body
                 .row 
                     .col-md-6.col-12 
                         a(href="product2_1.html") 
-                            img.img-fluid.img-big(src="public/images/coming-soon.png", alt="")
+                            .img-big
+                                img.img-fluid(src="public/images/coming-soon.png", alt="")
                             h3 真豪修邊刀
                     .col-md-6.col-12 
                         a(href="product2_2.html") 
-                            img.img-fluid.img-big(src="public/images/coming-soon.png", alt="")
+                            .img-big
+                                img.img-fluid(src="public/images/coming-soon.png", alt="")
                             h3 六角軸修邊刀頭
                     .col-md-6.col-12 
                         a(href="product2_3.html") 
-                            img.img-fluid.img-big(src="public/images/coming-soon.png", alt="")
+                            .img-big
+                                img.img-fluid(src="public/images/coming-soon.png", alt="")
                             h3 壓力板手
     footer 
         .container 
