--- a/pug/about_us.pug
+++ b/pug/about_us.pug
@@ -42,10 +42,10 @@ body
             p 天氣越炎熱，對空調的需求越高，就更需要注重空調的清潔！我們致力於推出冷氣空調相關的產品，#[br] 能夠用更輕鬆的方式來保養、清潔冷氣，才能在這炎炎夏日，享受乾淨舒服的冷氣。而每項產品的零件，#[br] 都是朝著輕巧耐用、組裝簡單的方向來去研發，就是為了讓我們的產品是人人都可以輕鬆上手的好工具！#[br] 所以，選擇真豪洗，就是選擇了最輕鬆、最方便的方式來清潔冷氣，帶給家人最舒適的環境！
         .about2.container.row 
             .col-md-4.col-12
-                img.img-fluid(src="public/images/coming-soon.png", alt="")
+                img.img-fluid(src="public/images/about1.png", alt="")
                 h3 主體架
             .col-md-4.col-12
-                img.img-fluid(src="public/images/coming-soon.png", alt="")
+                img.img-fluid(src="public/images/about2.png", alt="")
                 h3 集水袋
             .col-md-4.col-12
                 img.img-fluid(src="public/images/coming-soon.png", alt="")
