--- a/pug/product2.pug
+++ b/pug/product2.pug
@@ -54,7 +54,7 @@ body
                     .col-md-6.col-12 
                         a(href="product2_1.html") 
                             .img-big
-                                img.img-fluid(src="public/images/coming-soon.png", alt="")
+                                img.img-fluid(src="public/images/pd2-1.png", alt="")
                             h3 真豪修邊刀
                     .col-md-6.col-12 
                         a(href="product2_2.html") 
