--- a/pug/product2_2.pug
+++ b/pug/product2_2.pug
@@ -54,21 +54,17 @@ body
             .product-right
                 .row 
                     .col-md-6.col-12 
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/pd2-2-1.png", alt="")
                     .col-md-6.col-12
                         h2 六角軸修邊刀頭
-                        p 
-                        p 
-                        p 
-                        p 
-                        p 
-                        p 
+                        p 適用銅管尺寸2~5分
+                        p 相當於1~16mm
+                        p 刀頭外層鍍鈦,不易生鏽
+                        p 此修邊刀頭運用在電動鑽頭
                     .col-md-4.col-12
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/pd2-2-2.png", alt="")
                     .col-md-4.col-12
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
-                    .col-md-4.col-12
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/pd2-2-3.png", alt="")
     footer 
         .container 
             .row 
