--- a/pug/product1_2.pug
+++ b/pug/product1_2.pug
@@ -58,11 +58,9 @@ body
                     .col-md-6.col-12
                         h2 鯨霸冷氣清洗槽
                         p 適用尺寸:95~160CM
-                        p 輕量化,好攜帶
-                        p 外袋展開大,好收納
-                        p 左右出管都可輕鬆使用
-                        p 兩段式排水接管(不會塞水 )
-                        p 零件都可單一更換,不必整組換新
+                        p 真豪洗清洗的大小鯨霸也適用
+                        p 鯨霸還有隨件附上加長桿
+                        p 上下高度能夠再擴大6公分
                     .col-md-4.col-12
                         img.img-fluid(src="public/images/coming-soon.png", alt="")
                     .col-md-4.col-12
