--- a/pug/product2.pug
+++ b/pug/product2.pug
@@ -59,7 +59,7 @@ body
                     .col-md-6.col-12 
                         a(href="product2_2.html") 
                             .img-big
-                                img.img-fluid(src="public/images/coming-soon.png", alt="")
+                                img.img-fluid(src="public/images/pd2-2.png", alt="")
                             h3 六角軸修邊刀頭
                     .col-md-6.col-12 
                         a(href="product2_3.html") 
