--- a/pug/product2_1.pug
+++ b/pug/product2_1.pug
@@ -54,15 +54,15 @@ body
             .product-right
                 .row 
                     .col-md-6.col-12 
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/pd2-1-1.png", alt="")
                     .col-md-6.col-12
                         h2 真豪修邊刀
-                        p 
-                        p 
-                        p 
-                        p 
-                        p 
-                        p 
+                        p 適用銅管尺寸2~5分
+                        p 相當於1~16mm
+                        p 刀頭外層鍍鈦,不易生鏽
+                        p 輕輕一按就能替換刀頭
+                        p 購買還有附贈小刀片可以使用
+                        p 刀頭可以另外單一購買
                     .col-md-4.col-12
                         img.img-fluid(src="public/images/coming-soon.png", alt="")
                     .col-md-4.col-12
