--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -479,7 +479,7 @@ footer>.container>.row>div>p{
 //============================================================
 section{
     background-size: 100%;
-    background-image: url("/public/images/seamless.png");
+    background-image: url("../images/seamless.png");
     background-repeat: repeat;
     z-index: -999;
 }
