--- a/pug/about_us.pug
+++ b/pug/about_us.pug
@@ -63,7 +63,7 @@ body
                     img.icon-mail(src="public/images/icon-mail.png", alt="")
                     p hongcheng@easywash.com
                 div.floor2
-                    img(src="public/images/icon-line.png", alt="")
+                    img(src="public/images/icon-line2.png", alt="")
                     p ID:01469740
             p copyright
 
