--- a/pug/product1_1.pug
+++ b/pug/product1_1.pug
@@ -63,6 +63,7 @@ body
                         p 左右出管都可輕鬆使用
                         p 兩段式排水接管(不會塞水 )
                         p 零件都可單一更換,不必整組換新
+                        a(href="https://www.youtube.com/watch?v=PGiqnDiTnaI&t=2s") 使用教學
                     .col-md-4.col-12
                         img.img-fluid(src="public/images/coming-soon.png", alt="")
                     .col-md-4.col-12
