--- a/pug/product1_2.pug
+++ b/pug/product1_2.pug
@@ -59,7 +59,8 @@ body
                         h2 鯨霸冷氣清洗槽
                         p 適用尺寸:95~160CM
                         p 真豪洗清洗的大小鯨霸也適用
-                        p 鯨霸還有隨件附上加長桿
+                        p 使用方式與真豪洗相同
+                        p 鯨霸隨件附上加長桿
                         p 上下高度能夠再擴大6公分
                     .col-md-4.col-12
                         img.img-fluid(src="public/images/coming-soon.png", alt="")
