--- a/pug/about_us.pug
+++ b/pug/about_us.pug
@@ -62,7 +62,7 @@ body
                 div.floor2           
                     img.icon-mail(src="public/images/icon-mail.png", alt="")
                     p hongcheng@easywash.com
-                div.floor2
+                div.floor2.line
                     img(src="public/images/icon-line2.png", alt="")
                     p ID:01469740
             p copyright
