--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -499,7 +499,9 @@ section>.about1{
 }
 section>.about1>p{
     margin-bottom: 0;
-    padding-bottom: 40px;
+}
+section>.about1>p:last-child{
+    margin-bottom: 40px;
     font-weight: 800;
 }
 //超過768px以上執行-start
