--- a/pug/faq.pug
+++ b/pug/faq.pug
@@ -41,25 +41,25 @@ body
         .container-faq
             .question-container
                 .question 
-                    h3 問題1
+                    h3 如何購買
                     .icon-arrow 
                         i.fa-solid.fa-angle-down
                 .answer 
-                    p 答案1
+                    p 全台冷氣冷材行都有銷售通路，網路電商也有可以購買的賣場喔!
             .question-container
                 .question 
-                    h3 問題2
+                    h3 部分零件壞了怎麼辦
                     .icon-arrow 
                         i.fa-solid.fa-angle-down
                 .answer 
-                    p 答案2
+                    p 可以連絡原本購買的店家，需要更換什麼店主就會幫你們叫貨喔!
             .question-container
                 .question 
-                    h3 問題3
+                    h3 我是經銷商，請問進貨的管道是？
                     .icon-arrow 
                         i.fa-solid.fa-angle-down
                 .answer 
-                    p 答案3
+                    p 歡迎撥打頁尾的連絡電話，也可以傳真或是加LINE喔!
     footer 
         .container 
             .row 
