--- a/pug/product1_1.pug
+++ b/pug/product1_1.pug
@@ -63,13 +63,13 @@ body
                         p 左右出管都可輕鬆使用
                         p 兩段式排水接管(不會塞水 )
                         p 零件都可單一更換,不必整組換新
-                        a(href="https://www.youtube.com/watch?v=PGiqnDiTnaI&t=2s") 使用教學
+                        a(href="https://youtu.be/PGiqnDiTnaI" target="_blank") 使用教學
                     .col-md-4.col-12
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/pd1-1-2.png", alt="")
                     .col-md-4.col-12
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/pd1-1-3.png", alt="")
                     .col-md-4.col-12
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/pd1-1-4.png", alt="")
                     .col-md-4.col-12
                         img.img-fluid(src="public/images/coming-soon.png", alt="")
                     .col-md-4.col-12
