--- a/pug/product1_2.pug
+++ b/pug/product1_2.pug
@@ -62,6 +62,8 @@ body
                         p 使用方式與真豪洗相同
                         p 鯨霸隨件附上加長桿
                         p 上下高度能夠再擴大6公分
+                        a(href="https://youtu.be/PGiqnDiTnaI" target="_blank") 使用教學
+
                     .col-md-4.col-12
                         img.img-fluid(src="public/images/coming-soon.png", alt="")
                     .col-md-4.col-12
