--- a/pug/product1_3.pug
+++ b/pug/product1_3.pug
@@ -57,6 +57,13 @@ body
                         img.img-fluid(src="public/images/coming-soon.png", alt="")
                     .col-md-6.col-12
                         h2 四方吹冷氣清洗槽
+                        p 即將上市
+                    .col-md-4.col-12
+                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                    .col-md-4.col-12
+                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                    .col-md-4.col-12
+                        img.img-fluid(src="public/images/coming-soon.png", alt="")
 
     footer 
         .container 
