--- a/pug/product2_3.pug
+++ b/pug/product2_3.pug
@@ -57,7 +57,7 @@ body
                         img.img-fluid(src="public/images/coming-soon.png", alt="")
                     .col-md-6.col-12
                         h2 壓力板手
-                        p 
+                        p 即將上市
                         p 
                         p 
                         p 
