--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -590,6 +590,9 @@ section>.container>.product-right>.row h3{
 section>.container>.product-right>.row h3:hover{
     color:gray;
 }
+section>.container>.product-right>.row a{
+    color: red;
+}
 //超過768px以上執行-start
 @media (min-width:768px){
     section>.container>.product-left>dl>dt{
@@ -655,7 +658,7 @@ section>.container>.product-right>.row h3:hover{
 .question-container{
     border: 1px solid #2A66AC;
     border-radius: 4px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     line-height: 20px;
     padding: 10px 40px 10px 10px;
     cursor: pointer;
