--- a/pug/client.pug
+++ b/pug/client.pug
@@ -41,7 +41,7 @@ body
         .container 
             .row 
                 .col-md-4.col-12 
-                    img.img-fluid(src="public/images/coming-soon.png", alt="")
+                    img.img-fluid(src="public/images/client1.png", alt="")
                 .col-md-4.col-12 
                     img.img-fluid(src="public/images/coming-soon.png", alt="")
                 .col-md-4.col-12 
