--- a/pug/product3.pug
+++ b/pug/product3.pug
@@ -52,19 +52,19 @@ body
             .product-right
                 .row 
                     .col-md-4.col-12  
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/parts1.png", alt="")
                         h3 調整轉軸
                     .col-md-4.col-12  
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/about2.png", alt="")
                         h3 集水袋
                     .col-md-4.col-12  
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/parts3.png", alt="")
                         h3 ㄇ型主體架
                     .col-md-4.col-12  
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/parts4.png", alt="")
                         h3 中層U型架
                     .col-md-4.col-12  
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/parts5.png", alt="")
                         h3 伸縮管
                     .col-md-4.col-12  
                         img.img-fluid(src="public/images/coming-soon.png", alt="")
