--- a/pug/product2_2.pug
+++ b/pug/product2_2.pug
@@ -58,7 +58,7 @@ body
                     .col-md-6.col-12
                         h2 六角軸修邊刀頭
                         p 適用銅管尺寸2~5分
-                        p 相當於1~16mm
+                        p 也適用於1~16mm
                         p 刀頭外層鍍鈦,不易生鏽
                         p 此修邊刀頭運用於電動鑽頭
                     .col-md-4.col-12
