--- a/pug/product2_1.pug
+++ b/pug/product2_1.pug
@@ -37,7 +37,7 @@ body
             .container
                 a(href="index.html") 首頁
                 span &nbsp; &gt; &nbsp;
-                a(href='javascript:;') 產品介紹
+                a(href='product1.html') 產品介紹
                 span &nbsp; &gt; &nbsp;
                 a(href="product2.html") 手工具
                 span &nbsp; &gt; &nbsp;
@@ -50,7 +50,9 @@ body
                     dt 
                         a(href="product2_2.html") 六角軸修邊刀頭
                     dt 
-                        a(href="product2_3.html") 壓力板手
+                        a(href="product2_3.html") 大力活動扳手
+                    dt 
+                        a(href="product2_4.html") 螺絲小幫手
             .product-right
                 .row 
                     .col-md-6.col-12 
@@ -58,23 +60,17 @@ body
                     .col-md-6.col-12
                         h2 真豪修邊刀
                         p 適用銅管尺寸2~5分
-                        p 相當於1~16mm
-                        p 刀頭外層鍍鈦,不易生鏽
+                        p 也適用於1~16mm
+                        p 刀頭外層鍍鈦，不易生鏽
                         p 輕輕一按就能替換刀頭
                         p 購買還有附贈小刀片可以使用
                         p 刀頭可以另外單一購買
                     .col-md-4.col-12
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/pd2-1-2.png", alt="")
                     .col-md-4.col-12
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/pd2-1-3.png", alt="")
                     .col-md-4.col-12
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
-                    .col-md-4.col-12
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
-                    .col-md-4.col-12
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
-                    .col-md-4.col-12
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/pd2-1-4.png", alt="")
     footer 
         .container 
             .row 
