--- a/pug/product1_1.pug
+++ b/pug/product1_1.pug
@@ -37,7 +37,7 @@ body
             .container
                 a(href="index.html") 首頁
                 span &nbsp; &gt; &nbsp;
-                a(href='javascript:;') 產品介紹
+                a(href='product1.html') 產品介紹
                 span &nbsp; &gt; &nbsp;
                 a(href="product1.html") 冷氣清洗槽
                 span &nbsp; &gt; &nbsp;
@@ -71,11 +71,9 @@ body
                     .col-md-4.col-12
                         img.img-fluid(src="public/images/pd1-1-4.png", alt="")
                     .col-md-4.col-12
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/pd1-1-5.png", alt="")
                     .col-md-4.col-12
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
-                    .col-md-4.col-12
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/pd1-1-6.png", alt="")
     footer 
         .container 
             .row 
