--- a/pug/product1_3.pug
+++ b/pug/product1_3.pug
@@ -37,7 +37,7 @@ body
             .container
                 a(href="index.html") 首頁
                 span &nbsp; &gt; &nbsp;
-                a(href='javascript:;') 產品介紹
+                a(href='product1.html') 產品介紹
                 span &nbsp; &gt; &nbsp;
                 a(href="product1.html") 冷氣清洗槽
                 span &nbsp; &gt; &nbsp;
