--- a/pug/product2.pug
+++ b/pug/product2.pug
@@ -37,7 +37,7 @@ body
             .container
                 a(href="index.html") 首頁
                 span &nbsp; &gt; &nbsp;
-                a(href='javascript:;') 產品介紹
+                a(href='product1.html') 產品介紹
                 span &nbsp; &gt; &nbsp;
                 a(href="product2.html") 手工具
         .container
@@ -65,7 +65,12 @@ body
                         a(href="product2_3.html") 
                             .img-big
                                 img.img-fluid(src="public/images/coming-soon.png", alt="")
-                            h3 壓力板手
+                            h3 大力活動扳手
+                    .col-md-6.col-12 
+                        a(href="product2_4.html") 
+                            .img-big
+                                img.img-fluid(src="public/images/pd2-4.png", alt="")
+                            h3 螺絲小幫手
     footer 
         .container 
             .row 
