--- a/pug/product2_2.pug
+++ b/pug/product2_2.pug
@@ -37,7 +37,7 @@ body
             .container
                 a(href="index.html") 首頁
                 span &nbsp; &gt; &nbsp;
-                a(href='javascript:;') 產品介紹
+                a(href='product1.html') 產品介紹
                 span &nbsp; &gt; &nbsp;
                 a(href="product2.html") 手工具
                 span &nbsp; &gt; &nbsp;
@@ -50,7 +50,9 @@ body
                     dt 
                         a(href="product2_2.html") 六角軸修邊刀頭
                     dt 
-                        a(href="product2_3.html") 壓力板手
+                        a(href="product2_3.html") 大力活動扳手
+                    dt 
+                        a(href="product2_4.html") 螺絲小幫手
             .product-right
                 .row 
                     .col-md-6.col-12 
@@ -59,7 +61,7 @@ body
                         h2 六角軸修邊刀頭
                         p 適用銅管尺寸2~5分
                         p 也適用於1~16mm
-                        p 刀頭外層鍍鈦,不易生鏽
+                        p 刀頭外層鍍鈦，不易生鏽
                         p 此修邊刀頭運用於電動鑽頭
                     .col-md-4.col-12
                         img.img-fluid(src="public/images/pd2-2-2.png", alt="")
