--- a/pug/product2_3.pug
+++ b/pug/product2_3.pug
@@ -37,11 +37,11 @@ body
             .container
                 a(href="index.html") 首頁
                 span &nbsp; &gt; &nbsp;
-                a(href='javascript:;') 產品介紹
+                a(href='product1.html') 產品介紹
                 span &nbsp; &gt; &nbsp;
                 a(href="product2.html") 手工具
                 span &nbsp; &gt; &nbsp;
-                a(href="product2_3.html") 壓力板手
+                a(href="product2_3.html") 大力活動扳手
         .container
             .product-left.col-12.col-md-9
                 dl 
@@ -50,23 +50,25 @@ body
                     dt 
                         a(href="product2_2.html") 六角軸修邊刀頭
                     dt 
-                        a(href="product2_3.html") 壓力板手
+                        a(href="product2_3.html") 大力活動扳手
+                    dt 
+                        a(href="product2_4.html") 螺絲小幫手
             .product-right
                 .row 
                     .col-md-6.col-12 
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/pd2-3-1.png", alt="")
                     .col-md-6.col-12
-                        h2 壓力板手
-                        p 即將上市
-                        p 
-                        p 
-                        p 
-                        p 
+                        h2 大力活動扳手
+                        p 防滑齒輪設計，夾持牢固
+                        p 刻度指示提高工作效率
+                        p 開口與調整螺母滑動順暢
+                        p 大力鎖緊構造安全
+                        p 防滑樹脂握把
                         p 
                     .col-md-4.col-12
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/pd2-3-2.png", alt="")
                     .col-md-4.col-12
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/pd2-3-3.png", alt="")
                     .col-md-4.col-12
                         img.img-fluid(src="public/images/coming-soon.png", alt="")
     footer 
