--- a/pug/product2_4.pug
+++ b/pug/product2_4.pug
@@ -32,43 +32,43 @@ body
                             a(href="faq.html") 常見問題
     .banner 
         img.img-fluid(src="public/images/product8.png", alt="")
-    .S1
+    section
+        .breadcrumb 
+            .container
+                a(href="index.html") 首頁
+                span &nbsp; &gt; &nbsp;
+                a(href='product1.html') 產品介紹
+                span &nbsp; &gt; &nbsp;
+                a(href="product2.html") 手工具
+                span &nbsp; &gt; &nbsp;
+                a(href="product2_4.html") 螺絲小幫手
         .container
-            h2 最新消息
-            ul.newspost 
-                li 
-                    .date 2022-06-10
-                    .product1 產品資訊
-                    .news 裝修最強助手-大力活動扳手即將推出,各位師傅們不要錯過喔!
-                li 
-                    .date 2022-05-23
-                    .product2 系統公告
-                    .news 6/1網站將進行維護,不便之處敬請見諒
-                li 
-                    .date 2022-05-10
-                    .product1 產品資訊
-                    .news 四方吹清洗槽即將上市,請各位多多關注官方資訊!
-            img.logo2-1(src="public/images/LOGO2.png", alt="")
-    .S2   
-        .container.row
-            .left.col-12
-                img.img-fluid(src="public/images/product6.png", alt="") 
-            .right.col-12
-                h2 真豪洗冷氣清洗槽
-                p 革命性產品
-                p 完全解決溢水的困擾
-                p 組裝快速省去繁雜工時
-    .S3    
-        .container.row  
-            .left.col-12
-                img.img-fluid(src="public/images/knife2.png", alt="")
-                img.logo2-2(src="public/images/LOGO2.png", alt="")
-            .right.col-12.order-md-1
-                h2 真豪修邊刀
-                p 方便攜帶
-                p 好操作
-                p 耐用
-                p 刀頭更換快速
+            .product-left.col-12.col-md-9
+                dl 
+                    dt 
+                        a(href="product2_1.html") 真豪修邊刀
+                    dt 
+                        a(href="product2_2.html") 六角軸修邊刀頭
+                    dt 
+                        a(href="product2_3.html") 大力活動扳手
+                    dt 
+                        a(href="product2_4.html") 螺絲小幫手
+            .product-right
+                .row 
+                    .col-md-6.col-12 
+                        img.img-fluid(src="public/images/pd2-4-1.png", alt="")
+                    .col-md-6.col-12
+                        h2 螺絲小幫手
+                        p 超強吸力，吸取大量螺絲不掉落
+                        p 耐磨耐割，真皮皮革包覆，不怕螺絲造成磨損或割傷
+                        p 鑰匙圈設計，隨取即用，輕巧便利
+                        p 適用於各行各業，吸取各式各樣小零件
+                        p 
+                        p 
+                    .col-md-4.col-12
+                        img.img-fluid(src="public/images/pd2-4-2.png", alt="")
+                    .col-md-4.col-12
+                        img.img-fluid(src="public/images/pd2-4-3.png", alt="")
     footer 
         .container 
             .row 
