--- a/pug/about_us.pug
+++ b/pug/about_us.pug
@@ -50,7 +50,7 @@ body
                 img.img-fluid(src="public/images/about2.png", alt="")
                 h3 集水袋
             .col-md-4.col-12
-                img.img-fluid(src="public/images/coming-soon.png", alt="")
+                img.img-fluid(src="public/images/about3.png", alt="")
                 h3 外提袋
     footer 
         .container 
