--- a/pug/product2_3.pug
+++ b/pug/product2_3.pug
@@ -70,7 +70,7 @@ body
                     .col-md-4.col-12
                         img.img-fluid(src="public/images/pd2-3-3.png", alt="")
                     .col-md-4.col-12
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/pd2-3-4.png", alt="")
     footer 
         .container 
             .row 
