--- a/pug/product3.pug
+++ b/pug/product3.pug
@@ -67,10 +67,10 @@ body
                         img.img-fluid(src="public/images/parts5.png", alt="")
                         h3 伸縮管
                     .col-md-4.col-12  
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/parts6.png", alt="")
                         h3 上檔水板
                     .col-md-4.col-12  
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/parts7.png", alt="")
                         h3 加長桿
     footer 
         .container 
