--- a/pug/product2.pug
+++ b/pug/product2.pug
@@ -64,7 +64,7 @@ body
                     .col-md-6.col-12 
                         a(href="product2_3.html") 
                             .img-big
-                                img.img-fluid(src="public/images/coming-soon.png", alt="")
+                                img.img-fluid(src="public/images/pd2-3.png", alt="")
                             h3 大力活動扳手
                     .col-md-6.col-12 
                         a(href="product2_4.html") 
