--- a/pug/client.pug
+++ b/pug/client.pug
@@ -44,20 +44,6 @@ body
                     img.img-fluid(src="public/images/client1.png", alt="")
                 .col-md-4.col-12 
                     img.img-fluid(src="public/images/client2.png", alt="")
-                .col-md-4.col-12 
-                    img.img-fluid(src="public/images/coming-soon.png", alt="")
-                .col-md-4.col-12 
-                    img.img-fluid(src="public/images/coming-soon.png", alt="")
-                .col-md-4.col-12 
-                    img.img-fluid(src="public/images/coming-soon.png", alt="")
-                .col-md-4.col-12 
-                    img.img-fluid(src="public/images/coming-soon.png", alt="")
-                .col-md-4.col-12 
-                    img.img-fluid(src="public/images/coming-soon.png", alt="")
-                .col-md-4.col-12 
-                    img.img-fluid(src="public/images/coming-soon.png", alt="")
-                .col-md-4.col-12 
-                    img.img-fluid(src="public/images/coming-soon.png", alt="")
     footer 
         .container 
             .row 
@@ -69,7 +55,7 @@ body
                     p (04)-7321101
                 div.floor2           
                     img.icon-mail(src="public/images/icon-mail2.png", alt="")
-                    p hongcheng@easywash.com
+                    p black123963@gmail.com
                 div.floor2.line
                     img(src="public/images/icon-line2.png", alt="")
                     p ID:01469740
