--- a/pug/index.pug
+++ b/pug/index.pug
@@ -37,15 +37,15 @@ body
             h2 最新消息
             ul.newspost 
                 li 
-                    .date 2022-06-10
+                    .date 2022-11-01
                     .product1 產品資訊
                     .news 裝修最強助手-大力活動扳手即將推出,各位師傅們不要錯過喔!
                 li 
-                    .date 2022-05-23
-                    .product2 系統公告
-                    .news 6/1網站將進行維護,不便之處敬請見諒
+                    .date 2022-11-01
+                    .product1 產品資訊
+                    .news 螺絲小幫手-真豪吸上市囉!
                 li 
-                    .date 2022-05-10
+                    .date 2022-11-01
                     .product1 產品資訊
                     .news 四方吹清洗槽即將上市,請各位多多關注官方資訊!
             img.logo2-1(src="public/images/LOGO2.png", alt="")
@@ -80,7 +80,7 @@ body
                     p (04)-7321101
                 div.floor2           
                     img.icon-mail(src="public/images/icon-mail2.png", alt="")
-                    p hongcheng@easywash.com
+                    p black123963@gmail.com
                 div.floor2.line
                     img(src="public/images/icon-line2.png", alt="")
                     p ID:01469740
