--- a/pug/product1_2.pug
+++ b/pug/product1_2.pug
@@ -54,7 +54,7 @@ body
             .product-right
                 .row 
                     .col-md-6.col-12 
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/pd1-2-1.png", alt="")
                     .col-md-6.col-12
                         h2 鯨霸冷氣清洗槽
                         p 適用尺寸:95~160CM
@@ -64,10 +64,6 @@ body
                         p 上下高度能夠再擴大6公分
                         a(href="https://youtu.be/PGiqnDiTnaI" target="_blank") 使用教學
 
-                    .col-md-4.col-12
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
-                    .col-md-4.col-12
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
                     .col-md-4.col-12
                         img.img-fluid(src="public/images/coming-soon.png", alt="")
     footer 
@@ -81,7 +77,7 @@ body
                     p (04)-7321101
                 div.floor2           
                     img.icon-mail(src="public/images/icon-mail2.png", alt="")
-                    p hongcheng@easywash.com
+                    p black123963@gmail.com
                 div.floor2.line
                     img(src="public/images/icon-line2.png", alt="")
                     p ID:01469740
