--- a/pug/product3.pug
+++ b/pug/product3.pug
@@ -83,7 +83,7 @@ body
                     p (04)-7321101
                 div.floor2           
                     img.icon-mail(src="public/images/icon-mail2.png", alt="")
-                    p hongcheng@easywash.com
+                    p black123963@gmail.com
                 div.floor2.line
                     img(src="public/images/icon-line2.png", alt="")
                     p ID:01469740
